@@ -26,21 +26,22 @@
 #include <iostream>
 
 
-rx_meter_c_sptr make_rx_meter_c()
+rx_meter_c_sptr make_rx_meter_c(double quad_rate)
 {
-    return gnuradio::get_initial_sptr(new rx_meter_c());
+    return gnuradio::get_initial_sptr(new rx_meter_c(quad_rate));
 }
 
-rx_meter_c::rx_meter_c()
+rx_meter_c::rx_meter_c(double quad_rate)
     : gr::sync_block ("rx_meter_c",
           gr::io_signature::make(1, 1, sizeof(gr_complex)),
           gr::io_signature::make(0, 0, 0)),
-      d_level(0.0),
-      d_level_db(0.0),
-      d_sum(0.0),
-      d_num(0)
+      d_quadrate(quad_rate),
+      d_avgsize(quad_rate * 0.100)
 {
+    /* allocate circular buffer */
+    d_cbuf.set_capacity(d_avgsize + d_quadrate);
 
+    d_lasttime = std::chrono::steady_clock::now();
 }
 
 rx_meter_c::~rx_meter_c()
@@ -52,21 +53,13 @@ int rx_meter_c::work(int noutput_items,
                      gr_vector_const_void_star &input_items,
                      gr_vector_void_star &output_items)
 {
-    (void) output_items; // unused
+    std::lock_guard<std::mutex> lock(d_mutex);
 
     const gr_complex *in = (const gr_complex *) input_items[0];
-    float pwr = 0.0;
-
-    d_num += noutput_items;
+    (void) output_items; // unused
 
     for (int i = 0; i < noutput_items; i++)
-    {
-        pwr = in[i].real()*in[i].real() + in[i].imag()*in[i].imag();
-        d_sum += pwr;
-    }
-    d_level = d_sum / (float)(d_num);
-
-    d_level_db = (float) 10. * log10f(d_level + 1.0e-20);
+        d_cbuf.push_back(in[i]);
 
     return noutput_items;
 }
@@ -74,25 +67,25 @@ int rx_meter_c::work(int noutput_items,
 
 float rx_meter_c::get_level()
 {
-    float retval = d_level;
-    reset_stats();
+    std::lock_guard<std::mutex> lock(d_mutex);
 
-    return retval;
+    if (d_cbuf.size() < d_avgsize)
+        return 0;
+
+    std::chrono::time_point<std::chrono::steady_clock> now = std::chrono::steady_clock::now();
+    std::chrono::duration<double> diff = now - d_lasttime;
+    d_lasttime = now;
+
+    d_cbuf.erase_begin(std::min((unsigned int)(diff.count() * d_quadrate * 1.001), (unsigned int)d_cbuf.size() - d_avgsize));
+
+    float sum = 0;
+    for (unsigned int i = 0; i < d_avgsize; i++)
+        sum += d_cbuf[i].real()*d_cbuf[i].real() + d_cbuf[i].imag()*d_cbuf[i].imag();
+
+    return sum / (float)(d_avgsize);
 }
 
 float rx_meter_c::get_level_db()
 {
-    float retval = d_level_db;
-    reset_stats();
-
-    return retval;
-}
-
-/*! \brief Reset statistics. */
-void rx_meter_c::reset_stats()
-{
-    //d_level = 0.0;
-    d_level_db = 0.0;
-    d_sum = 0.0;
-    d_num = 0;
+    return (float) 10. * log10f(get_level() + 1.0e-20);
 }
